--- a/Automated_Sorting_System.ioc
+++ b/Automated_Sorting_System.ioc
@@ -37,26 +37,29 @@ Mcu.IP3=RCC
 Mcu.IP4=SYS
 Mcu.IP5=TIM1
 Mcu.IP6=TIM4
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP7=USART1
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PB6
-Mcu.Pin11=PB7
-Mcu.Pin12=VP_SYS_VS_Systick
-Mcu.Pin13=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin14=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin10=PA13
+Mcu.Pin11=PA14
+Mcu.Pin12=PB6
+Mcu.Pin13=PB7
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin16=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
 Mcu.Pin5=PB12
 Mcu.Pin6=PB13
 Mcu.Pin7=PA8
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=15
+Mcu.Pin8=PA9
+Mcu.Pin9=PA10
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -77,8 +80,11 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -88,6 +94,8 @@ PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA8.Signal=S_TIM1_CH1
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PB12.Locked=true
 PB12.Signal=GPIO_Output
 PB13.Locked=true
@@ -166,6 +174,8 @@ TIM1.Prescaler=72-1
 TIM4.IPParameters=Prescaler,Period
 TIM4.Period=1000-1
 TIM4.Prescaler=72-1
+USART1.IPParameters=VirtualMode
+USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
